# 歷史更新 History Update

* 20230330 Update
  * 更新 個人不想看的FB/IG廣告網站
  * 更新 Dcard受害文章

* 20230329 Update
  * 更新 個人不想看的FB/IG廣告網站
  * 更新 Dcard受害文章
  * 更新 ScamAdviser電子報

* 20230328 Update
  * 更新 個人不想看的FB/IG廣告網站
  * 更新 Dcard受害文章
  * 更新 內容農場與多導向可能危險網站

* 20230327 Update
  * 更新 個人不想看的FB/IG廣告網站
  * 更新 Dcard受害文章
  * 更新 內容農場與多導向可能危險網站
  * 解放 fx110
  * 加入 FX110虛假交易所

* 20230326 Update
  * 更新 個人不想看的FB/IG廣告網站
  * 更新 Dcard受害文章

* 20230325 Update
  * 更新 個人不想看的FB/IG廣告網站
  * 更新 Dcard受害文章
  * 更新 165反詐騙公告網址(112/3/15-112/3/21民眾通報假投資(博弈)詐騙網站)

* 20230324 Update
  * 更新 Dcard受害文章
  * 更新 個人不想看的FB/IG廣告網站

* 20230323 Update
  * 更新 Dcard受害文章
  * 更新 內容農場與多導向可能危險網站

* 20230322 Update
  * 更新 個人不想看的FB/IG廣告網站
  * 更新 內容農場與多導向可能危險網站
  * 更新 Dcard受害文章
  * 更新 ScamAdviser電子報
  * 解放 bitfinex

* 20230321 Update
  * 更新 個人不想看的FB/IG廣告網站
  * 更新 Dcard受害文章
  * 排除 pingshangyang.webnode.tw

* 20230320 Update
  * 更新 個人不想看的FB/IG廣告網站
  * 更新 Dcard受害文章

* 20230319 Update
  * 更新 個人不想看的FB/IG廣告網站
  * 更新 Dcard受害文章
  * 更新 Global-Anti-Scam-Org-全球反詐騙(From JasonY)

* 20230317 Update
  * 更新 個人不想看的FB/IG廣告網站
  * 更新 165反詐騙公告網址(112/3/8-112/3/14民眾通報假投資(博弈)詐騙網站)
  * 更新 Global-Anti-Scam-Org-全球反詐騙(From JasonY)

* 20230316 Update
  * 更新 個人不想看的FB/IG廣告網站
  * 更新 Dcard受害文章
  * 更新 內容農場與多導向可能危險網站

* 20230315 Update
  * 更新 Dcard受害文章
  * 更新 個人不想看的FB/IG廣告網站
  * 更新 ScamAdviser電子報

* 20230314 Update
  * 更新 個人不想看的FB/IG廣告網站
  * 更新 Dcard受害文章

* 20230313 Update
  * 更新 Dcard受害文章

* 20230312 Update
  * 更新 個人不想看的FB/IG廣告網站
  * 更新 Dcard受害文章
  * 解放 megadap.com
  * 更新 Global-Anti-Scam-Org-全球反詐騙(From JasonY)

* 20230310 Update
  * 更新 個人不想看的FB/IG廣告網站
  * 解放 immers.icu
  * 更新 Dcard受害文章
  * 加入 封鎖html資訊
  * 更新 內容農場與多導向可能危險網站
  * 更新 165反詐騙公告網址(112/3/1-112/3/7民眾通報假投資(博弈)詐騙網站)

* 20230309 Update
  * 更新 個人不想看的FB/IG廣告網站
  * 更新 Dcard受害文章

* 20230308 Update
  * 更新 Dcard受害文章
  * 更新 個人不想看的FB/IG廣告網站
  * 更新 內容農場與多導向可能危險網站
  * 加入 預設ublacklist設定擋
  * 更新 ScamAdviser電子報

* 20230307 Update
  * 更新 Dcard受害文章
  * 更新 個人不想看的FB/IG廣告網站
  * 解放 pixnet.net

* 20230306 Update