@@ -1,5 +1,10 @@
 # 歷史更新 History Update
 
+* 20230331 Update
+  * 更新 個人不想看的FB/IG廣告網站
+  * 更新 Dcard受害文章
+  * 加入 統計TLD
+
 * 20230330 Update
   * 更新 個人不想看的FB/IG廣告網站
   * 更新 Dcard受害文章
